v2.6/overview/guides.md
---
lastmod: 2020-04-17
old_version: true
date: 2020-04-17
menu:
  community_v2.6:
    parent: "000 Getting Started"
linktitle: Tutorials and Guides
title: Comprehensive Guides for KrakenD API Gateway
description: Access a collection of comprehensive guides for KrakenD API Gateway, providing step-by-step instructions and best practices for various use cases
notoc: true
weight: 1000
---
The documentation in this site covers all the functionality of KrakenD API Gateway, but over time we have received from KrakenD users all kinds of tutorials, guides and other resources that illustrate how to do a specific thing. We have included below a few links, but you can share yours.

{{< button-group >}}
{{< button url="https://github.com/krakend/krakend-documentation/edit/master/overview/guides.md" text="Add a link" >}}<svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1" />
</svg>
{{< /button >}}
{{< /button-group >}}


## User-contributed resources

- [Getting started with KrakenD on Kubernetes / AKS](https://partlycloudy.blog/2021/02/17/getting-started-with-krakend-on-kubernetes-aks/) by Christian Dennig (Cloud Solution Architect @ Microsoft)
- [Build and Deploy with Kubernetes, Helm, and Skaffold](https://betterprogramming.pub/maintainability-in-the-face-of-api-complexity-e23531e2d322) by Fabijan Bajo (Technical Lead, DevOps / Cloud Infrastructure @ IBM)
- [Microservices with Micronaut, KrakenD and Consul](https://piotrminkowski.com/2021/02/23/microservices-with-micronaut-krakend-and-consul/) by Piotr Minkowski (Solution Architect @ Red Hat)
- [How to Successfully Set Up KrakenD on GKE: A Step by Step Guide](https://hackernoon.com/how-to-successfully-set-up-krakend-on-gke-a-step-by-step-guide-ny22311c) by Vijay Savanth on Hackernoon
- [Writing Plugins using Golang](https://www.eventslooped.com/posts/krakend-writing-plugins/) by Ilya Nemtsev on Eventslooped
- [Building Micro Services with .Net Core + Krakend API Gateway](https://balramchavan.medium.com/building-micro-services-with-net-core-krakend-api-gateway-fad036f10298) by Balram Chavan (Engineer @Boehringer Ingelheim)
- [How To Effortlessly Adopt Microservices Using KrakenD](https://betterprogramming.pub/how-to-effortlessly-adopt-microservices-using-krakend-28c265573877) by Kirshi Yin on BetterProgramming
- [Using a proxy and API gateway to optimize Compass for performance](https://blog.hcltechsw.com/compass/using-a-proxy-and-api-gateway-to-optimize-compass-for-performance/) by Michael Hudson (Technology Director @HCL Software)
- [Configuring Grafana and InfluxDB](https://skalena.github.io/api-methodology/public/cont/krakend-grafana-influxdb/) by Skalena (KrakenD partner, Brazil)
- [API Gateway na prática com KrakenD - Video in portuguese](https://www.youtube.com/watch?v=ni-rti5DgYY) by Wesley Willians (Full Cycle)
- [Publish Messages to Google PubSub Topic with KrakenD APIGateway as REST API and Subscribe using SpringBoot](https://medium.com/@velmuruganmp1210/publish-messages-to-google-pubsub-topic-with-krakend-apigateway-as-rest-api-and-subscribe-using-75fb875f2f2f) by Velmurugan M. (Solutions Architect)


If you have written a tutorial, guide, video or any other material worth sharing with the community, let us know.
